<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/yellow"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_taqueria" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:columnCount="2"
        android:paddingHorizontal="20dp">

        <Button
            android:id="@+id/button_tacos"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/red"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/tacos"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_antojitos"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/red"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/antojitos"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_especialidades"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/red"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="especial"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_caldos"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/red"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/caldos"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_combination"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/red"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="comb"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_tortas"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/red"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/tortas"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_sopas"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/red"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/sopas"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_sideorders"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/red"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="side"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_bebidas"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="2dp"
            android:background="@color/red"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="drinks"
            android:textColor="@color/white"
            android:textSize="15dp" />


    </GridLayout>


</LinearLayout>